# xSparkPlug

./: Cargo.toml  build.rs  sparkplug_b.proto
src/: main.rs
src/proto/: spb_proto.rs
