[package]
name = "xspb"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
rumqttc = { version = "0.24", features = ["use-rustls", "use-native-tls"]}
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1" }
serde_json = "1"

tonic = "*"
prost = "0.13"

[build-dependencies]
tonic-build = "*"