[package]
name = "xSparkplug"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

rumqttc = { version = "0.24", features = ["use-rustls", "use-native-tls"]}
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1" }
serde_json = "1"

tonic = "*"
prost = "0.13"

[build-dependencies]
tonic-build = "*"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.